tests/baselines/reference/keyofAndIndexedAccessErrors.errors.txt
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(10,18): error TS2304: Cannot find name 'K0'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(20,18): error TS2339: Property 'foo' does not exist on type 'Shape'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(21,18): error TS2339: Property 'foo' does not exist on type 'Shape'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(22,18): error TS2538: Type 'any' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(23,18): error TS2537: Type 'Shape' has no matching index signature for type 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(24,18): error TS2537: Type 'Shape' has no matching index signature for type 'number'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(25,18): error TS2538: Type 'boolean' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(26,18): error TS2538: Type 'void' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(27,18): error TS2538: Type 'undefined' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(28,18): error TS2538: Type '{ x: string; }' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(29,18): error TS2537: Type 'Shape' has no matching index signature for type 'number'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(29,18): error TS2537: Type 'Shape' has no matching index signature for type 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(30,18): error TS2538: Type 'string & number' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(31,18): error TS2537: Type 'Shape' has no matching index signature for type 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(31,18): error TS2538: Type 'false' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(31,18): error TS2538: Type 'true' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(35,21): error TS2537: Type 'string[]' has no matching index signature for type 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(36,21): error TS2538: Type 'boolean' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(41,31): error TS2538: Type 'boolean' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(46,16): error TS2538: Type 'boolean' cannot be used as an index type.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(63,33): error TS2345: Argument of type '"size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(64,33): error TS2345: Argument of type '"name" | "size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
  Type '"size"' is not assignable to type '"name" | "width" | "height" | "visible"'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(66,24): error TS2345: Argument of type '"size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(67,24): error TS2345: Argument of type '"name" | "size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
  Type '"size"' is not assignable to type '"name" | "width" | "height" | "visible"'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(73,5): error TS2536: Type 'keyof T | keyof U' cannot be used to index type 'T | U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(74,5): error TS2536: Type 'keyof T | keyof U' cannot be used to index type 'T | U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(82,5): error TS2322: Type 'keyof T | keyof U' is not assignable to type 'keyof T & keyof U'.
  Type 'keyof T' is not assignable to type 'keyof T & keyof U'.
    Type 'string | number | symbol' is not assignable to type 'keyof T & keyof U'.
      Type 'string' is not assignable to type 'keyof T & keyof U'.
        Type 'string' is not assignable to type 'keyof T'.
          Type 'keyof T' is not assignable to type 'keyof U'.
            Type 'string | number | symbol' is not assignable to type 'keyof U'.
              Type 'string' is not assignable to type 'keyof U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(83,5): error TS2322: Type 'keyof T | keyof U' is not assignable to type 'keyof T & keyof U'.
  Type 'keyof T' is not assignable to type 'keyof T & keyof U'.
    Type 'keyof T' is not assignable to type 'keyof U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(86,5): error TS2322: Type 'keyof T | keyof U' is not assignable to type 'keyof T & keyof U'.
  Type 'keyof T' is not assignable to type 'keyof T & keyof U'.
    Type 'keyof T' is not assignable to type 'keyof U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(87,5): error TS2322: Type 'keyof T | keyof U' is not assignable to type 'keyof T & keyof U'.
  Type 'keyof T' is not assignable to type 'keyof T & keyof U'.
    Type 'keyof T' is not assignable to type 'keyof U'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(103,9): error TS2322: Type 'Extract<keyof T, string>' is not assignable to type 'K'.
  'Extract<keyof T, string>' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string'.
    Type 'string & keyof T' is not assignable to type 'K'.
      'string & keyof T' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string'.
        Type 'string' is not assignable to type 'K'.
          'string' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string'.
            Type 'string' is not assignable to type 'K'.
              'string' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(105,9): error TS2322: Type 'T[Extract<keyof T, string>]' is not assignable to type 'T[K]'.
  Type 'Extract<keyof T, string>' is not assignable to type 'K'.
    'Extract<keyof T, string>' is assignable to the constraint of type 'K', but 'K' could be instantiated with a different subtype of constraint 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(108,5): error TS2322: Type 'T[K]' is not assignable to type 'U[K]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(111,5): error TS2322: Type 'T[J]' is not assignable to type 'U[J]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(114,5): error TS2322: Type 'T[K]' is not assignable to type 'T[J]'.
  Type 'K' is not assignable to type 'J'.
    'K' is assignable to the constraint of type 'J', but 'J' could be instantiated with a different subtype of constraint 'string'.
      Type 'Extract<keyof T, string>' is not assignable to type 'J'.
        'Extract<keyof T, string>' is assignable to the constraint of type 'J', but 'J' could be instantiated with a different subtype of constraint 'string'.
          Type 'string & keyof T' is not assignable to type 'J'.
            'string & keyof T' is assignable to the constraint of type 'J', but 'J' could be instantiated with a different subtype of constraint 'string'.
              Type 'string' is not assignable to type 'J'.
                'string' is assignable to the constraint of type 'J', but 'J' could be instantiated with a different subtype of constraint 'string'.
                  Type 'string' is not assignable to type 'J'.
                    'string' is assignable to the constraint of type 'J', but 'J' could be instantiated with a different subtype of constraint 'string'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(117,5): error TS2322: Type 'T[K]' is not assignable to type 'U[J]'.
  Type 'T' is not assignable to type 'U'.
    'T' is assignable to the constraint of type 'U', but 'U' could be instantiated with a different subtype of constraint '{}'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(122,5): error TS2322: Type '42' is not assignable to type 'keyof T'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(123,5): error TS2322: Type '"hello"' is not assignable to type 'keyof T'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(140,5): error TS2322: Type '42' is not assignable to type 'T[K]'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(141,5): error TS2322: Type '"hello"' is not assignable to type 'T[K]'.
tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts(142,5): error TS2322: Type 'number[]' is not assignable to type 'T[K]'.


==== tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts (41 errors) ====
    class Shape {
        name: string;
        width: number;
        height: number;
        visible: boolean;
    }
    
    type Dictionary<T> = { [x: string]: T };
    
    type T00 = keyof K0;  // Error
                     ~~
!!! error TS2304: Cannot find name 'K0'.
    
    type T01 = keyof Object;
    type T02 = keyof keyof Object;
    type T03 = keyof keyof keyof Object;
    type T04 = keyof keyof keyof keyof Object;
    type T05 = keyof keyof keyof keyof keyof Object;
    type T06 = keyof keyof keyof keyof keyof keyof Object;
    
    type T10 = Shape["name"];
    type T11 = Shape["foo"];  // Error
                     ~~~~~
!!! error TS2339: Property 'foo' does not exist on type 'Shape'.
    type T12 = Shape["name" | "foo"];  // Error
                     ~~~~~~~~~~~~~~
!!! error TS2339: Property 'foo' does not exist on type 'Shape'.
    type T13 = Shape[any];  // Error
                     ~~~
!!! error TS2538: Type 'any' cannot be used as an index type.
    type T14 = Shape[string];  // Error
                     ~~~~~~
!!! error TS2537: Type 'Shape' has no matching index signature for type 'string'.
    type T15 = Shape[number];  // Error
                     ~~~~~~
!!! error TS2537: Type 'Shape' has no matching index signature for type 'number'.
    type T16 = Shape[boolean];  // Error
                     ~~~~~~~
!!! error TS2538: Type 'boolean' cannot be used as an index type.
    type T17 = Shape[void];  // Error
                     ~~~~
!!! error TS2538: Type 'void' cannot be used as an index type.
    type T18 = Shape[undefined];  // Error
                     ~~~~~~~~~
!!! error TS2538: Type 'undefined' cannot be used as an index type.
    type T19 = Shape[{ x: string }];  // Error
                     ~~~~~~~~~~~~~
!!! error TS2538: Type '{ x: string; }' cannot be used as an index type.
    type T20 = Shape[string | number];  // Error
                     ~~~~~~~~~~~~~~~
!!! error TS2537: Type 'Shape' has no matching index signature for type 'number'.
                     ~~~~~~~~~~~~~~~
!!! error TS2537: Type 'Shape' has no matching index signature for type 'string'.
    type T21 = Shape[string & number];  // Error
                     ~~~~~~~~~~~~~~~
!!! error TS2538: Type 'string & number' cannot be used as an index type.
    type T22 = Shape[string | boolean];  // Error
                     ~~~~~~~~~~~~~~~~
!!! error TS2537: Type 'Shape' has no matching index signature for type 'string'.
                     ~~~~~~~~~~~~~~~~
!!! error TS2538: Type 'false' cannot be used as an index type.
                     ~~~~~~~~~~~~~~~~
!!! error TS2538: Type 'true' cannot be used as an index type.
    
    type T30 = string[]["length"];
    type T31 = string[][number];
    type T32 = string[][string];  // Error
                        ~~~~~~
!!! error TS2537: Type 'string[]' has no matching index signature for type 'string'.
    type T33 = string[][boolean];  // Error
                        ~~~~~~~
!!! error TS2538: Type 'boolean' cannot be used as an index type.
    
    type T40 = Dictionary<string>[any];
    type T41 = Dictionary<string>[number];
    type T42 = Dictionary<string>[string];
    type T43 = Dictionary<string>[boolean];  // Error
                                  ~~~~~~~
!!! error TS2538: Type 'boolean' cannot be used as an index type.
    
    type T50 = any[any];
    type T51 = any[number];
    type T52 = any[string];
    type T53 = any[boolean];  // Error
                   ~~~~~~~
!!! error TS2538: Type 'boolean' cannot be used as an index type.
    
    type T60 = {}["toString"];
    type T61 = []["toString"];
    
    declare let cond: boolean;
    
    function getProperty<T, K extends keyof T>(obj: T, key: K) {
        return obj[key];
    }
    
    function setProperty<T, K extends keyof T>(obj: T, key: K, value: T[K]) {
        obj[key] = value;
    }
    
    function f10(shape: Shape) {
        let x1 = getProperty(shape, "name");
        let x2 = getProperty(shape, "size");  // Error
                                    ~~~~~~
!!! error TS2345: Argument of type '"size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
        let x3 = getProperty(shape, cond ? "name" : "size");  // Error
                                    ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '"name" | "size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
!!! error TS2345:   Type '"size"' is not assignable to type '"name" | "width" | "height" | "visible"'.
        setProperty(shape, "name", "rectangle");
        setProperty(shape, "size", 10);  // Error
                           ~~~~~~
!!! error TS2345: Argument of type '"size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
        setProperty(shape, cond ? "name" : "size", 10);  // Error
                           ~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2345: Argument of type '"name" | "size"' is not assignable to parameter of type '"name" | "width" | "height" | "visible"'.
!!! error TS2345:   Type '"size"' is not assignable to type '"name" | "width" | "height" | "visible"'.
    }
    
    function f20<T, U>(x: T | U, y: T & U, k1: keyof (T | U), k2: keyof T & keyof U, k3: keyof (T & U), k4: keyof T | keyof U) {
        x[k1];
        x[k2];
        x[k3];  // Error
        ~~~~~
!!! error TS2536: Type 'keyof T | keyof U' cannot be used to index type 'T | U'.
        x[k4];  // Error
        ~~~~~
!!! error TS2536: Type 'keyof T | keyof U' cannot be used to index type 'T | U'.
    
        y[k1];
        y[k2];
        y[k3];
        y[k4];
    
        k1 = k2;
        k1 = k3;  // Error
        ~~
!!! error TS2322: Type 'keyof {|T|0|} | keyof {|U|1|}' is not assignable to type 'keyof {|T|2|} & keyof {|U|3|}'.
!!! error TS2322:   Type 'keyof {|T|4|}' is not assignable to type 'keyof {|T|5|} & keyof {|U|6|}'.
!!! error TS2322:     Type 'string | number | symbol' is not assignable to type 'keyof {|T|7|} & keyof {|U|8|}'.
!!! error TS2322:       Type 'string' is not assignable to type 'keyof {|T|9|} & keyof {|U|10|}'.
!!! error TS2322:         Type 'string' is not assignable to type 'keyof {|T|11|}'.
!!! error TS2322:           Type 'keyof {|T|12|}' is not assignable to type 'keyof {|U|13|}'.
!!! error TS2322:             Type 'string | number | symbol' is not assignable to type 'keyof {|U|14|}'.
!!! error TS2322:               Type 'string' is not assignable to type 'keyof {|U|15|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 9 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 10 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 11 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 12 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 13 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 14 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 15 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
        k1 = k4;  // Error
        ~~
!!! error TS2322: Type 'keyof {|T|0|} | keyof {|U|1|}' is not assignable to type 'keyof {|T|2|} & keyof {|U|3|}'.
!!! error TS2322:   Type 'keyof {|T|4|}' is not assignable to type 'keyof {|T|5|} & keyof {|U|6|}'.
!!! error TS2322:     Type 'keyof {|T|7|}' is not assignable to type 'keyof {|U|8|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
    
        k2 = k1;
        k2 = k3;  // Error
        ~~
!!! error TS2322: Type 'keyof {|T|0|} | keyof {|U|1|}' is not assignable to type 'keyof {|T|2|} & keyof {|U|3|}'.
!!! error TS2322:   Type 'keyof {|T|4|}' is not assignable to type 'keyof {|T|5|} & keyof {|U|6|}'.
!!! error TS2322:     Type 'keyof {|T|7|}' is not assignable to type 'keyof {|U|8|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
        k2 = k4;  // Error
        ~~
!!! error TS2322: Type 'keyof {|T|0|} | keyof {|U|1|}' is not assignable to type 'keyof {|T|2|} & keyof {|U|3|}'.
!!! error TS2322:   Type 'keyof {|T|4|}' is not assignable to type 'keyof {|T|5|} & keyof {|U|6|}'.
!!! error TS2322:     Type 'keyof {|T|7|}' is not assignable to type 'keyof {|U|8|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:14
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:70:17
    
        k3 = k1;
        k3 = k2;
        k3 = k4;
    
        k4 = k1;
        k4 = k2;
        k4 = k3;
    }
    
    // Repro from #17166
    function f3<T, K extends Extract<keyof T, string>, U extends T, J extends K>(
        t: T, k: K, tk: T[K], u: U, j: J, uk: U[K], tj: T[J], uj: U[J]): void {
        for (let key in t) {
            key = k // ok, K ==> keyof T
            k = key // error, keyof T =/=> K
            ~
!!! error TS2322: Type '{|Extract|0|}<keyof {|T|1|}, string>' is not assignable to type '{|K|2|}'.
!!! error TS2322:   '{|Extract|3|}<keyof {|T|4|}, string>' is assignable to the constraint of type '{|K|5|}', but '{|K|6|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:     Type 'string & keyof {|T|7|}' is not assignable to type '{|K|8|}'.
!!! error TS2322:       'string & keyof {|T|9|}' is assignable to the constraint of type '{|K|10|}', but '{|K|11|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:         Type 'string' is not assignable to type '{|K|12|}'.
!!! error TS2322:           'string' is assignable to the constraint of type '{|K|13|}', but '{|K|14|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:             Type 'string' is not assignable to type '{|K|15|}'.
!!! error TS2322:               'string' is assignable to the constraint of type '{|K|16|}', but '{|K|17|}' could be instantiated with a different subtype of constraint 'string'.
!!! annotated symbol 0 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 3 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 9 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 10 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 11 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 12 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 13 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 14 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 15 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 16 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 17 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
            t[key] = tk; // ok, T[K] ==> T[keyof T]
            tk = t[key]; // error, T[keyof T] =/=> T[K]
            ~~
!!! error TS2322: Type '{|T|0|}[{|Extract|1|}<keyof {|T|2|}, string>]' is not assignable to type '{|T|3|}[{|K|4|}]'.
!!! error TS2322:   Type '{|Extract|5|}<keyof {|T|6|}, string>' is not assignable to type '{|K|7|}'.
!!! error TS2322:     '{|Extract|8|}<keyof {|T|9|}, string>' is assignable to the constraint of type '{|K|10|}', but '{|K|11|}' could be instantiated with a different subtype of constraint 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 1 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 5 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 8 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 9 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 10 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 11 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
        }
        tk = uk;
        uk = tk; // error
        ~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|U|2|}[{|K|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
    
        tj = uj;
        uj = tj; // error
        ~~
!!! error TS2322: Type '{|T|0|}[{|J|1|}]' is not assignable to type '{|U|2|}[{|J|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
    
        tk = tj;
        tj = tk; // error
        ~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|T|2|}[{|J|3|}]'.
!!! error TS2322:   Type '{|K|4|}' is not assignable to type '{|J|5|}'.
!!! error TS2322:     '{|K|6|}' is assignable to the constraint of type '{|J|7|}', but '{|J|8|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:       Type '{|Extract|9|}<keyof {|T|10|}, string>' is not assignable to type '{|J|11|}'.
!!! error TS2322:         '{|Extract|12|}<keyof {|T|13|}, string>' is assignable to the constraint of type '{|J|14|}', but '{|J|15|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:           Type 'string & keyof {|T|16|}' is not assignable to type '{|J|17|}'.
!!! error TS2322:             'string & keyof {|T|18|}' is assignable to the constraint of type '{|J|19|}', but '{|J|20|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:               Type 'string' is not assignable to type '{|J|21|}'.
!!! error TS2322:                 'string' is assignable to the constraint of type '{|J|22|}', but '{|J|23|}' could be instantiated with a different subtype of constraint 'string'.
!!! error TS2322:                   Type 'string' is not assignable to type '{|J|24|}'.
!!! error TS2322:                     'string' is assignable to the constraint of type '{|J|25|}', but '{|J|26|}' could be instantiated with a different subtype of constraint 'string'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 9 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 10 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 11 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 12 /.ts/lib.es5.d.ts:1464:6
!!! annotated symbol 13 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 14 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 15 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 16 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 17 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 18 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 19 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 20 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 21 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 22 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 23 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 24 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 25 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 26 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
    
        tk = uj;
        uj = tk; // error
        ~~
!!! error TS2322: Type '{|T|0|}[{|K|1|}]' is not assignable to type '{|U|2|}[{|J|3|}]'.
!!! error TS2322:   Type '{|T|4|}' is not assignable to type '{|U|5|}'.
!!! error TS2322:     '{|T|6|}' is assignable to the constraint of type '{|U|7|}', but '{|U|8|}' could be instantiated with a different subtype of constraint '{}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:16
!!! annotated symbol 2 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 3 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:65
!!! annotated symbol 4 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 5 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 6 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:13
!!! annotated symbol 7 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
!!! annotated symbol 8 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:99:52
    }
    
    // The constraint of 'keyof T' is 'keyof T'
    function f4<T extends { [K in keyof T]: string }>(k: keyof T) {
        k = 42; // error
        ~
!!! error TS2322: Type '42' is not assignable to type 'keyof {|T|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:121:13
        k = "hello"; // error
        ~
!!! error TS2322: Type '"hello"' is not assignable to type 'keyof {|T|0|}'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:121:13
    }
    
    // Repro from #27470
    
    type UndefinedKeys<T extends Record<string, any>> = {
      [K in keyof T]: undefined extends T[K] ? K : never
    };
    
    type MyType = {a: string, b: string | undefined}
    
    type Result1 = UndefinedKeys<MyType>;
    
    const a1: Result1['a'] = 'a';  // Error
    const b1: Result1['b'] = 'b';
    
    function test1<T extends Record<string, any>, K extends keyof T>(t: T, k: K) {
        t[k] = 42;  // Error
        ~~~~
!!! error TS2322: Type '42' is not assignable to type '{|T|0|}[{|K|1|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:16
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:47
        t[k] = "hello";  // Error
        ~~~~
!!! error TS2322: Type '"hello"' is not assignable to type '{|T|0|}[{|K|1|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:16
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:47
        t[k] = [10, 20];  // Error
        ~~~~
!!! error TS2322: Type 'number[]' is not assignable to type '{|T|0|}[{|K|1|}]'.
!!! annotated symbol 0 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:16
!!! annotated symbol 1 tests/cases/conformance/types/keyof/keyofAndIndexedAccessErrors.ts:139:47
    }
    
    // Repro from #28839
    
    function f30<T, K extends keyof T>() {
        let x: Partial<Record<keyof T, string>>[K] = "hello";
    }
    
    function f31<T, K extends keyof T>() {
        let x: Partial<Partial<Partial<Partial<Partial<Partial<Partial<Record<keyof T, string>>>>>>>>[K] = "hello";
    }
    